// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Module configuration > nested complex route 1`] = `
[
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "path": "/about",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "name": "undefined___locale",
    "path": "/:locale(ja)/about",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/coaching.vue",
    "name": "services-coaching",
    "path": "/services/coaching",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/coaching.vue",
    "name": "services-coaching___locale",
    "path": "/:locale(ja)/services/coaching",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/app.vue",
    "name": "services-development-app",
    "path": "/services/development/app",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/app.vue",
    "name": "services-development-app___locale",
    "path": "/:locale(ja)/services/development/app",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/index.vue",
    "name": "services-development",
    "path": "/services/development",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/index.vue",
    "name": "services-development___locale",
    "path": "/:locale(ja)/services/development",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/website.vue",
    "name": "services-development-website",
    "path": "/services/development/website",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/website.vue",
    "name": "services-development-website___locale",
    "path": "/:locale(ja)/services/development/website",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/index.vue",
    "name": "services",
    "path": "/services",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/index.vue",
    "name": "services___locale",
    "path": "/:locale()/services",
  },
]
`;

exports[`Module configuration > nested complex route 2`] = `
[
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "meta": {
      "locale": true,
    },
    "path": "/about",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "meta": {
      "locale": true,
    },
    "path": "/:locale(ja)/about",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/coaching.vue",
    "meta": {
      "locale": true,
    },
    "name": "services-coaching",
    "path": "/services/coaching",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/coaching.vue",
    "meta": {
      "locale": true,
    },
    "name": "services-coaching___locale",
    "path": "/:locale(ja)/services/coaching",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/app.vue",
    "meta": {
      "locale": true,
    },
    "name": "services-development-app",
    "path": "/services/development/app",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/app.vue",
    "meta": {
      "locale": true,
    },
    "name": "services-development-app___locale",
    "path": "/:locale(ja)/services/development/app",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/index.vue",
    "meta": {
      "locale": true,
    },
    "name": "services-development",
    "path": "/services/development",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/index.vue",
    "meta": {
      "locale": true,
    },
    "name": "services-development___locale",
    "path": "/:locale(ja)/services/development",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/website.vue",
    "meta": {
      "locale": true,
    },
    "name": "services-development-website",
    "path": "/services/development/website",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/website.vue",
    "meta": {
      "locale": true,
    },
    "name": "services-development-website___locale",
    "path": "/:locale(ja)/services/development/website",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/index.vue",
    "meta": {
      "locale": true,
    },
    "name": "services",
    "path": "/services",
  },
]
`;

exports[`Module configuration > nested dynamic route 1`] = `
[
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/[nested]/[route]/index.vue",
    "name": "nested-route",
    "path": "/:nested/:route",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/[nested]/[route]/index.vue",
    "name": "nested-route___locale",
    "path": "/:locale(ja|fr)/:nested/:route",
  },
]
`;

exports[`Module configuration > nested dynamic route 2`] = `
[
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/[nested]/[route]/index.vue",
    "meta": {
      "locale": true,
    },
    "name": "nested-route",
    "path": "/:nested/:route",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/[nested]/[route]/index.vue",
    "meta": {
      "locale": true,
    },
    "name": "nested-route___locale",
    "path": "/:locale(ja|fr)/:nested/:route",
  },
]
`;

exports[`Module configuration > nested static route 1`] = `
[
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/nested/route/index.vue",
    "name": "nested-route",
    "path": "/nested/route",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/nested/route/index.vue",
    "name": "nested-route___locale",
    "path": "/:locale(ja|fr)/nested/route",
  },
]
`;

exports[`Module configuration > nested static route 2`] = `
[
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/nested/route/index.vue",
    "meta": {
      "locale": true,
    },
    "name": "nested-route",
    "path": "/nested/route",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/nested/route/index.vue",
    "meta": {
      "locale": true,
    },
    "name": "nested-route___locale",
    "path": "/:locale(ja|fr)/nested/route",
  },
]
`;

exports[`Module configuration > simple 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/nuxt-app/pages/about/index.vue",
        "name": "about",
        "path": "",
      },
    ],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "path": "/about",
  },
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/nuxt-app/pages/about/index.vue",
        "name": "about___locale",
        "path": "",
      },
    ],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "name": "undefined___locale",
    "path": "/:locale(fr)/about",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/index.vue",
    "name": "index",
    "path": "/",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/index.vue",
    "name": "index___locale",
    "path": "/:locale(ja|fr)",
  },
]
`;

exports[`Module configuration > simple 2`] = `
[
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/nuxt-app/pages/about/index.vue",
        "meta": {
          "locale": true,
        },
        "name": "about",
        "path": "",
      },
    ],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "meta": {
      "locale": true,
    },
    "path": "/about",
  },
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/nuxt-app/pages/about/index.vue",
        "meta": {
          "locale": true,
        },
        "name": "about___locale",
        "path": "/:locale(fr)/about",
      },
    ],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "meta": {
      "locale": true,
    },
    "path": "/:locale(fr)/about",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/index.vue",
    "meta": {
      "locale": true,
    },
    "name": "index",
    "path": "/",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/index.vue",
    "meta": {
      "locale": true,
    },
    "name": "index___locale",
    "path": "/:locale(ja|fr)",
  },
]
`;

exports[`Page components > dynamic route 1`] = `
[
  {
    "children": [],
    "name": "articles-name",
    "path": "/articles/:name",
  },
  {
    "children": [],
    "name": "articles-name___locale",
    "path": "/:locale(fr)/articles/:name",
  },
]
`;

exports[`Page components > dynamic route 2`] = `
[
  {
    "children": [],
    "meta": {
      "locale": true,
    },
    "name": "articles-name",
    "path": "/articles/:name",
  },
  {
    "children": [],
    "meta": {
      "locale": true,
    },
    "name": "articles-name___locale",
    "path": "/:locale(fr)/articles/:name",
  },
]
`;

exports[`Page components > simple 1`] = `
[
  {
    "children": [],
    "path": "/about",
  },
  {
    "children": [],
    "name": "undefined___locale",
    "path": "/:locale(fr|ja)/about",
  },
]
`;

exports[`Page components > simple 2`] = `
[
  {
    "children": [],
    "meta": {
      "locale": true,
    },
    "path": "/about",
  },
  {
    "children": [],
    "meta": {
      "locale": true,
    },
    "path": "/:locale(fr|ja)/about",
  },
]
`;
